# web-app

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  package.json
migrations/2024-08-28-173611_create_users/: up.sql
migrations/2024-09-04-165122_files/: down.sql  up.sql
migrations/2024-09-09-180404_public_private_files/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs
src/catchers/: catchers.rs  mod.rs  mount_catchers.rs
src/database/: mod.rs
src/errors/: mod.rs
src/models/: mod.rs
src/routes/: mod.rs  mount_routes.rs  routes.rs
src/routes/file_routes/: mod.rs
src/routes/ws_routes/: mod.rs  routes.rs
src/services/: mod.rs
www/: index.html  package-lock.json  package.json
www/src/: App.css  App.tsx  index.css
www/src/components/: VideoStream.tsx
www/src/utils/: usersWS.ts  utils.ts  videoWS.ts
